<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="save_login"
        android:title="@string/login_title"
        android:summary="@string/summary_login">

    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="save_password"
        android:title="@string/password_title"
        android:summary="@string/summary_password">

    </CheckBoxPreference>
    <EditTextPreference
        android:key="user_hello"
        android:title="@string/hello"
        android:summary="@string/save_hello">

    </EditTextPreference>
    <ListPreference
        android:key="language_preference"
        android:title="@string/lang_title"
        android:entries="@array/languages"
        android:entryValues="@array/lang_values">

    </ListPreference>
</PreferenceScreen>